--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,17 +22,15 @@
 @book{proj3,
   title={Validation of Colorado Visual Snow Scale 2.0},
   author={Maione, Sam, Pelak, Victoria, Gerhardstein, Peter},
-  abstract={My honors thesis (turned publication) centered on a visual disorder I myself have: visual snow syndrome. We established a standardized way to assess the way symptoms impact daily life of people with visual snow syndrome.},
+  abstract={We established a standardized way to assess the way symptoms impact daily life of people with visual snow syndrome. I am deeply thankful for the funding to conduct this research from Binghamton University (in the form of an Undergraduate Research Award), the Eye on Vision Foundation, and the Visual Snow Initiative that made this research possible.},
   preview={vss.png},
   DOI={https://doi.org/10.31234/osf.io/689cm_v1},
-  award={I am deeply thankful for the funding to conduct this research from Binghamton University (in the form of an Undergraduate Research Award), the Eye on Vision Foundation, and the Visual Snow Initiative.}
-  award_name={Funding}
 }
 
 @book{proj4,
   title={Shared neural correlates of spatial working memory and physical prediction},
   author={Maione, Sam, Liu, Shari},
-  abstract={We used an open fMRI dataset to assess the relationship between the neural correlates of spatial working memory and physical prediction, ultimately finding a case that physical prediction may be useful for a variety of aspects of cognition.},
+  abstract={We used an open fMRI dataset to assess the relationship between the neural correlates of spatial working memory and physical prediction, ultimately finding a case that physical prediction may be useful for a variety of aspects of cognition (and not the other way around!).},
   preview={fpmdd.png},
   URL={https://2024.ccneuro.org/pdf/529_Paper_authored_Authored_Frontoparietal-regions-engaged-in-physical-prediction.pdf},
 }
