--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,11 +12,11 @@
 }
 
 @book{proj2,
-  title={Cignal},
+  title={Civic Signal},
   author={Maione, Sam, Daniels, Sawyer},
-  abstract={Cignal is an app that scrapes congressional repositories for current legislation and then summarizes it (using a LLM on local resources) among other tools to better understand how legislation affects everyday people.},
+  abstract={Civic Signal (or Cignal, for short) is an app that scrapes congressional repositories for current legislation and then summarizes it (using a LLM on local resources) among other tools to better understand how legislation affects everyday people.},
   preview={cignal.png},
-  repo={https://letterspublication.wordpress.com/}
+  url={https://github.com/sammaione/civic_signal}
 }
 
 @book{proj3,
@@ -24,7 +24,7 @@
   author={Maione, Sam, Pelak, Victoria, Gerhardstein, Peter},
   abstract={We established a standardized way to assess the way symptoms impact daily life of people with visual snow syndrome. I am deeply thankful for the funding to conduct this research from Binghamton University (in the form of an Undergraduate Research Award), the Eye on Vision Foundation, and the Visual Snow Initiative that made this research possible.},
   preview={vss.png},
-  DOI={https://doi.org/10.31234/osf.io/689cm_v1},
+  doi={https://doi.org/10.31234/osf.io/689cm_v1},
 }
 
 @book{proj4,
@@ -32,5 +32,5 @@
   author={Maione, Sam, Liu, Shari},
   abstract={We used an open fMRI dataset to assess the relationship between the neural correlates of spatial working memory and physical prediction, ultimately finding a case that physical prediction may be useful for a variety of aspects of cognition (and not the other way around!).},
   preview={fpmdd.png},
-  URL={https://2024.ccneuro.org/pdf/529_Paper_authored_Authored_Frontoparietal-regions-engaged-in-physical-prediction.pdf},
+  url={https://2024.ccneuro.org/pdf/529_Paper_authored_Authored_Frontoparietal-regions-engaged-in-physical-prediction.pdf},
 }
