--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{proj1,
+@article{proj1,
   title={letters: A community run zine},
   author={Maione, Sam, Sierzant, Emily, and the letters Team},
   abstract={letters is a grassroots community that organizes a biannual self-titled zine featuring a collection of political essays, commentary, and creative works written by the public, for the public.},
@@ -11,7 +11,7 @@
   url={https://letterspublication.wordpress.com/}
 }
 
-@book{proj2,
+@article{proj2,
   title={Civic Signal},
   author={Maione, Sam, Daniels, Sawyer},
   abstract={Civic Signal (or Cignal, for short) is an app that scrapes congressional repositories for current legislation and then summarizes it (using a LLM on local resources) among other tools to better understand how legislation affects everyday people.},
@@ -19,7 +19,7 @@
   url={https://github.com/sammaione/civic_signal}
 }
 
-@book{proj3,
+@article{proj3,
   title={Validation of Colorado Visual Snow Scale 2.0},
   author={Maione, Sam, Pelak, Victoria, Gerhardstein, Peter},
   abstract={We established a standardized way to assess the way symptoms impact daily life of people with visual snow syndrome. I am deeply thankful for the funding to conduct this research from Binghamton University (in the form of an Undergraduate Research Award), the Eye on Vision Foundation, and the Visual Snow Initiative that made this research possible.},
@@ -27,7 +27,7 @@
   doi={https://doi.org/10.31234/osf.io/689cm_v1},
 }
 
-@book{proj4,
+@article{proj4,
   title={Shared neural correlates of spatial working memory and physical prediction},
   author={Maione, Sam, Liu, Shari},
   abstract={We used an open fMRI dataset to assess the relationship between the neural correlates of spatial working memory and physical prediction, ultimately finding a case that physical prediction may be useful for a variety of aspects of cognition (and not the other way around!).},
