--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,34 +1,115 @@
 ---
 ---
 
-@article{proj1,
-  title={letters: A community run zine},
-  author={Maione, Sam, Sierzant, Emily, and the letters Team},
-  abstract={letters is a grassroots community that organizes a biannual self-titled zine featuring a collection of political essays, commentary, and creative works written by the public, for the public.},
-  preview={letterslogo.png},
-  url={https://letterspublication.wordpress.com/}
+@string{aps = {American Physical Society,}}
+
+@book{einstein1920relativity,
+  title={Relativity: the Special and General Theory},
+  author={Einstein, Albert},
+  year={1920},
+  publisher={Methuen & Co Ltd},
+  html={relativity.html}
 }
 
-@article{proj2,
-  title={Civic Signal},
-  author={Maione, Sam, Daniels, Sawyer},
-  abstract={Civic Signal (or Cignal, for short) is an app that scrapes congressional repositories for current legislation and then summarizes it (using a LLM on local resources) among other tools to better understand how legislation affects everyday people.},
-  preview={cignal.png},
-  url={https://github.com/sammaione/civic_signal}
+@book{einstein1956investigations,
+  bibtex_show={true},
+  title={Investigations on the Theory of the Brownian Movement},
+  author={Einstein, Albert},
+  year={1956},
+  publisher={Courier Corporation},
+  preview={brownian-motion.gif}
 }
 
-@article{proj3,
-  title={Validation of Colorado Visual Snow Scale 2.0},
-  author={Maione, Sam, Pelak, Victoria, Gerhardstein, Peter},
-  abstract={We established a standardized way to assess the way symptoms impact daily life of people with visual snow syndrome. I am deeply thankful for the funding to conduct this research from Binghamton University (in the form of an Undergraduate Research Award), the Eye on Vision Foundation, and the Visual Snow Initiative that made this research possible.},
-  preview={vss.png},
-  doi={https://doi.org/10.31234/osf.io/689cm_v1},
+@article{einstein1950meaning,
+  abbr={AJP},
+  bibtex_show={true},
+  title={The meaning of relativity},
+  author={Einstein, Albert and Taub, AH},
+  journal={American Journal of Physics},
+  volume={18},
+  number={6},
+  pages={403--404},
+  year={1950},
+  publisher={American Association of Physics Teachers}
 }
 
-@article{proj4,
-  title={Shared neural correlates of spatial working memory and physical prediction},
-  author={Maione, Sam, Liu, Shari},
-  abstract={We used an open fMRI dataset to assess the relationship between the neural correlates of spatial working memory and physical prediction, ultimately finding a case that physical prediction may be useful for a variety of aspects of cognition (and not the other way around!).},
-  preview={fpmdd.png},
-  url={https://2024.ccneuro.org/pdf/529_Paper_authored_Authored_Frontoparietal-regions-engaged-in-physical-prediction.pdf},
+@article{PhysRev.47.777,
+  abbr={PhysRev},
+  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
+  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
+  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
+  journal={Phys. Rev.},
+  location={New Jersey},
+  volume={47},
+  issue={10},
+  pages={777--780},
+  numpages={0},
+  year={1935},
+  month={May},
+  publisher=aps,
+  doi={10.1103/PhysRev.47.777},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf={example_pdf.pdf},
+  altmetric={248277},
+  dimensions={true},
+  google_scholar_id={qyhmnyLat1gC},
+  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
+  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
+  annotation={* Example use of superscripts<br>† Albert Einstein},
+  selected={true},
+  inspirehep_id = {3255}
+}
+
+@article{einstein1905molekularkinetischen,
+  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
+  author={Einstein, A.},
+  journal={Annalen der physik},
+  volume={322},
+  number={8},
+  pages={549--560},
+  year={1905},
+  publisher={Wiley Online Library}
+}
+
+@article{einstein1905movement,
+  abbr={Ann. Phys.},
+  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
+  author={Einstein, A.},
+  journal={Ann. Phys.},
+  volume={17},
+  pages={549--560},
+  year={1905}
+}
+
+@article{einstein1905electrodynamics,
+  title={On the electrodynamics of moving bodies},
+  author={Einstein, A.},
+  year={1905}
+}
+
+@Article{einstein1905photoelectriceffect,
+  bibtex_show={true},
+  abbr={Ann. Phys.},
+  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
+  author={Albert Einstein},
+  abstract={This is the abstract text.},
+  journal={Ann. Phys.},
+  volume={322},
+  number={6},
+  pages={132--148},
+  year={1905},
+  doi={10.1002/andp.19053220607},
+  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
+  award_name={Nobel Prize}
+}
+
+@book{przibram1967letters,
+  bibtex_show={true},
+  title={Letters on wave mechanics},
+  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
+  year={1967},
+  publisher={Vision},
+  preview={wave-mechanics.gif},
+  abbr={Vision}
 }
