--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+@article{proj1,
+  abbr={letters},
+  title={letters: A community run zine},
+  author={Maione, Sam, Sierzant, Emily, and the letters Team},
+  additional_info={letters is a grassroots community that organizes a biannual self-titled zine featuring a collection of political essays, commentary, and creative works written by the public, for the public.},
+  preview={letterslogo.png},
+  url={https://letterspublication.wordpress.com/}
+}
+
 @article{PhysRev.47.777,
   abbr={PhysRev},
   title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
