--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,7 @@
   abbr={letters},
   title={letters: A community run zine},
   author={Maione, Sam, Sierzant, Emily, and the letters Team},
+  year={2025},
   additional_info={letters is a grassroots community that organizes a biannual self-titled zine featuring a collection of political essays, commentary, and creative works written by the public, for the public.},
   preview={letterslogo.png},
   url={https://letterspublication.wordpress.com/}
